# CW_5_DataBase

./: .env_sample  main.py  pyproject.toml  readme.md  task.md
src/: api_hh.py  db_manager.py  db_util.py  dfgd.py  pb_conn1.py
