[tool.poetry]
name = "cw-5-database"
version = "0.1.0"
description = ""
authors = ["Michael Gorbunov"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
types-psycopg2 = "^2.9.21.20240819"
types-requests = "^2.32.0.20240712"
aiohttp = "^3.10.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
